# repository/types.go
@@ -5,10 +5,10 @@ import "time"
 
 // Profile, representing profile object on repository
 type Profile struct {
-	ID          uint64     `json:"id"`
-	FullName    string     `json:"full_name"`
+	ID          uint64     `json:"id" db:"id"`
+	FullName    string     `json:"full_name" db:"full_name"`
 	CountryCode string     `json:"country_code"`
-	PhoneNumber string     `json:"phone_number"`
+	PhoneNumber string     `json:"phone_number" db:"phone_number"`
 	Password    string     `json:"password"`
 	CreatedAt   time.Time  `json:"created_at"`
 	UpdatedAt   *time.Time `json:"updated_at"`
